--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.mail.host=smtp.poczta.onet.pl
-spring.mail.port=465
-spring.mail.username=webtrackerzzpj@op.pl
-spring.mail.password=4q3H6#D0b!aC
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
@@ -11,5 +11,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled=
 spring.h2.console.path=/h2-console
