--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.h2.console.enabled=
+spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
