add postgresql dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.mail.host=
-spring.mail.port=
-spring.mail.username=
-spring.mail.password=
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=webtracker07@gmail.com
+spring.mail.password=96NSh^Rod9V#
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.enable=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/webtracker
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+server.port=8082
+
