remove data from application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=webtracker07@gmail.com
-spring.mail.password=96NSh^Rod9V#
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -10,7 +10,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
 
-server.port=8082
+
+
 
